# image_transfer

./: .gitignore  README.md  TODO.md  generate_test_image.py
Scripts/: advanced_analysis.py  enhanced_test_runner.py  generate_4k_image.py  generate_4k_images.py  generate_compression_images.py  generate_diverse_test_images.py  plot_chunk_graph.py  plot_compression_graph.py  quick_test_runner.py  run_chunk_tests.py  run_compression_tests.py
src/image_transfer/: CMakeLists.txt  package.xml
src/image_transfer/src/: image_transfer_client.cpp  image_transfer_client_test.cpp  image_transfer_server.cpp
src/image_transfer_interfaces/: CMakeLists.txt  package.xml
src/image_transfer_interfaces/msg/: ImageTransfer.msg
src/image_transfer_interfaces/srv/: ImageTransfer.srv
